--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -72,7 +72,18 @@
             </li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-			  <li class="nav-item"><a href="/login/logout" class="nav-link">Logout</a></li>
+			  
+
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+				<div class="dropdown-menu" aria-labelledby="dropdown04">
+					<a class="dropdown-item" href="/login/profile">PROFILE</a>
+				  <a class="dropdown-item" href="/logout">LOGOUT</a>
+				  
+				</div>
+			  </li>
+			
+
 	          <li class="nav-item"><a href="/login/wishlist" class="nav-link">Wishlist</a></li>
 	          <li class="nav-item cta cta-colored"><a href="/login/cart" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
 
