--- a/views/user/addAddress.ejs
+++ b/views/user/addAddress.ejs
@@ -1,55 +1,9 @@
-<html lang="en">
-  <head>
-    <title>Minishop - Free Bootstrap 4 Template by Colorlib</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+<%- include('../userHeader.ejs') -%>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
-      rel="stylesheet"
-    />
-
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/open-iconic-bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="../../public/stylesheet/animate.css" />
-
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/owl.carousel.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/owl.theme.default.min.css"
-    />
-    <link rel="stylesheet" href="../../public/stylesheet/magnific-popup.css" />
-
-    <link rel="stylesheet" href="../../public/stylesheet/aos.css" />
-
-    <link rel="stylesheet" href="../../public/stylesheet/ionicons.min.css" />
-
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/bootstrap-datepicker.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/jquery.timepicker.css"
-    />
-
-    <link rel="stylesheet" href="../../public/stylesheet/flaticon.css" />
-    <link rel="stylesheet" href="../../public/stylesheet/icomoon.css" />
-    <link rel="stylesheet" href="../../public/stylesheet/style.css" />
-  </head>
-  <body>
-    <section>
+    <section style="margin-top: 100px; margin-bottom: 145px;">
       <div class="row mt-3 mx-3" style="margin-top: 25px">
-        <div class="col-md-3">
-          <div style="margin-top: 50px; margin-left: 10px" class="text-center">
+        <!-- <div class="col-md-3"> -->
+          <!-- <div style="margin-top: 50px; margin-left: 10px" class="text-center">
             <i
               id="animationDemo"
               data-mdb-animation="slide-right"
@@ -60,23 +14,21 @@
               class="fas fa-3x fa-shipping-fast text-white"
             ></i>
             <h3 class="mt-3 text-white">Welcome</h3>
-            <p class="white-text">
-              You are 30 seconds away from compleating your order!
-            </p>
-          </div>
-          <div class="text-center">
+            
+          </div> -->
+          <!-- <div class="text-center">
             <a href="/login/profile">
             <button type="submit" class="btn btn-white btn-rounded back-button">
               Go back
             </button>
         </a>
-          </div>
-        </div>
-        <div class="col-md-9 justify-content-center">
+          </div> -->
+        <!-- </div> -->
+        <div class="container col-md-9 justify-content-center">
           <div class="card card-custom pb-4">
             <div class="card-body mt-0 mx-5">
               <div class="text-center mb-3 pb-2 mt-3">
-                <h4 style="color: #495057">Add Address</h4>
+                <h4 style="color: #495057">ADD ADDRESS</h4>
               </div>
 
               <form action="/login/newAddress" class="mb-0" method="post">
@@ -87,7 +39,7 @@
                         type="text"
                         id="form9Example1"
                         name="fullName"
-                        class="form-control input-custom"
+                        class="form-control input-custom" required
                       />
                       <label class="form-label" for="form9Example1"
                         >Full name</label
@@ -100,7 +52,7 @@
                         type="text"
                         id="form9Example2"
                         name="houseName"
-                        class="form-control input-custom"
+                        class="form-control input-custom" required
                       />
                       <label class="form-label" for="form9Example2"
                         >House name / Office name</label
@@ -115,7 +67,7 @@
                         type="text"
                         id="form9Example3"
                         name="city"
-                        class="form-control input-custom"
+                        class="form-control input-custom" required
                       />
                       <label class="form-label" for="form9Example3">City</label>
                     </div>
@@ -126,7 +78,7 @@
                         type="text"
                         id="form9Example4"
                         name="state"
-                        class="form-control input-custom"
+                        class="form-control input-custom" required
                       />
                       <label class="form-label" for="form9Example4"
                         >State</label
@@ -141,7 +93,7 @@
                         type="number"
                         id="form9Example6"
                         name="pincode"
-                        class="form-control input-custom"
+                        class="form-control input-custom" required
                       />
                       <label class="form-label" for="form9Example6"
                         >Pincode</label
@@ -154,7 +106,7 @@
                         type="number"
                         id="typeEmail"
                         name="phone"
-                        class="form-control input-custom"
+                        class="form-control input-custom" required
                       />
                       <label class="form-label" for="typeEmail">Phone</label>
                     </div>
@@ -177,5 +129,5 @@
         </div>
       </div>
     </section>
-  </body>
-</html>
+    <%- include('../userFooter.ejs') -%>
+
