--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -15,36 +15,30 @@
 
     <link
       rel="stylesheet"
-      href="../../public/stylesheet/open-iconic-bootstrap.min.css"
+      href="../public/stylesheet/open-iconic-bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../../public/stylesheet/animate.css" />
+    <link rel="stylesheet" href="../public/stylesheet/animate.css" />
+
+    <link rel="stylesheet" href="../public/stylesheet/owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="../public/stylesheet/owl.theme.default.min.css"
+    />
+    <link rel="stylesheet" href="../public/stylesheet/magnific-popup.css" />
+
+    <link rel="stylesheet" href="../public/stylesheet/aos.css" />
+
+    <link rel="stylesheet" href="../public/stylesheet/ionicons.min.css" />
 
     <link
       rel="stylesheet"
-      href="../../public/stylesheet/owl.carousel.min.css"
+      href="../public/stylesheet/bootstrap-datepicker.css"
     />
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/owl.theme.default.min.css"
-    />
-    <link rel="stylesheet" href="../../public/stylesheet/magnific-popup.css" />
+    <link rel="stylesheet" href="../public/stylesheet/jquery.timepicker.css" />
 
-    <link rel="stylesheet" href="../../public/stylesheet/aos.css" />
-
-    <link rel="stylesheet" href="../../public/stylesheet/ionicons.min.css" />
-
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/bootstrap-datepicker.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../../public/stylesheet/jquery.timepicker.css"
-    />
-
-    <link rel="stylesheet" href="../../public/stylesheet/flaticon.css" />
-    <link rel="stylesheet" href="../../public/stylesheet/icomoon.css" />
-    <link rel="stylesheet" href="../../public/stylesheet/style.css" />
+    <link rel="stylesheet" href="../public/stylesheet/flaticon.css" />
+    <link rel="stylesheet" href="../public/stylesheet/icomoon.css" />
+    <link rel="stylesheet" href="../public/stylesheet/style.css" />
 
     <link
       rel="stylesheet"
@@ -62,52 +56,19 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
 
+    <!-- sweetalert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body class="goto-here">
-    <div class="py-1 bg-black">
-      <div class="container">
-        <div
-          class="row no-gutters d-flex align-items-start align-items-center px-md-0"
-        >
-          <div class="col-lg-12 d-block">
-            <div class="row d-flex">
-              <div class="col-md pr-4 d-flex topper align-items-center">
-                <div
-                  class="icon mr-2 d-flex justify-content-center align-items-center"
-                >
-                  <span class="icon-phone2"></span>
-                </div>
-                <span class="text">+ 1235 2355 98</span>
-              </div>
-              <div class="col-md pr-4 d-flex topper align-items-center">
-                <div
-                  class="icon mr-2 d-flex justify-content-center align-items-center"
-                >
-                  <span class="icon-paper-plane"></span>
-                </div>
-                <span class="text">youremail@email.com</span>
-              </div>
-              <div
-                class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right"
-              >
-                <span class="text"
-                  >3-5 Business days delivery &amp; Free Returns</span
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <nav
       class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">Minishop</a>
+        <a class="navbar-brand" href="/login/userHome">Insoles</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -122,10 +83,10 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
+            <li class="nav-item active">
+              <a href="/login/userHome" class="nav-link">Home</a>
             </li>
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -148,13 +109,30 @@
               <a href="about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="blog.html" class="nav-link">Blog</a>
-            </li>
-            <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
             </li>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="dropdown04"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                >Account</a
+              >
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+                <a class="dropdown-item" href="/login/profile">PROFILE</a>
+                <a class="dropdown-item" href="/login/logout">LOGOUT</a>
+              </div>
+            </li>
+
+            <li class="nav-item">
+              <a href="/login/wishlist" class="nav-link">Wishlist</a>
+            </li>
             <li class="nav-item cta cta-colored">
-              <a href="cart.html" class="nav-link"
+              <a href="/login/cart" class="nav-link"
                 ><span class="icon-shopping_cart"></span>[0]</a
               >
             </li>
@@ -162,10 +140,8 @@
         </div>
       </div>
     </nav>
-    <!-- Navbar -->
-
     <!-- breadcrumb -->
-    <div class="m-t-70 d-none d-lg-block"></div>
+    <div class="m-t-70 d-none d-lg-block" style="margin-top: 105px"></div>
     <!-- <div class="container ">
         <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
             <a href="/login/userHome" class="stext-109 cl8 hov-cl1 trans-04">
@@ -232,9 +208,9 @@
                       <%= address[index].phone %>
                     </p>
                     <!-- <p><strong>Address :</strong>
-                                            <%= address[index].city %> ,
-                                            <%= address[index].state %> - <%= address[index].pincode %></span>
-                                        </p> -->
+                    <%= address[index].city %> ,
+                    <%= address[index].state %> - <%= address[index].pincode %></span>
+                    </p> -->
                   </td>
                 </tr>
               </table>
@@ -254,6 +230,7 @@
                       <label class="form-check-label" for="exampleRadios1">
                         <p>
                           <strong>Name :</strong>
+                          
                           <%= address.fullName %>
                         </p>
                         <p>
@@ -477,12 +454,22 @@
                 Cash on delivery
               </label>
             </div>
+            <% if(address) {%>
             <button
               onclick="placeOrder('<%=index%>')"
               class="btn-success mt-4 flex-c-m stext-101 cl0 size-116 bor14 p-lr-15 trans-04 pointer"
             >
               Place Order
             </button>
+            <% }else { %>
+            <button
+              onclick="adressError()"
+              class="btn-success mt-4 flex-c-m stext-101 cl0 size-116 bor14 p-lr-15 trans-04 pointer"
+            >
+              Place Order
+            </button>
+
+            <% } %>
           </div>
         </div>
       </div>
@@ -504,7 +491,7 @@
           },
           method: "post",
           success: (response) => {
-            if (response.codeSuccess) {
+            if (response.codSuccess) {
               location.href = "/login/orderSuccess";
             } else {
               razorpayPayment(response);
@@ -512,59 +499,68 @@
           },
         });
 
-        function razorpayPayment(order) {
-          var options = {
-            key: "rzp_test_nOABmeWu0jJGLN", // Enter the Key ID generated from the Dashboard
-            amount: order.amount, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
-            currency: "INR",
-            name: "Ride",
-            description: "Test Transaction",
-            image: "https://example.com/your_logo",
-            order_id: order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-            callback_url: "https://eneqd3r9zrjok.x.pipedream.net/",
-            handler: function (response) {
-              // alert(response.razorpay_payment_id);
-              // alert(response.razorpay_order_id);
-              // alert(response.razorpay_signature)
+       
+      }
+      function razorpayPayment(order) {
+        var options = {
+          key: "rzp_test_mp1q8YWcYr4vEC", // Enter the Key ID generated from the Dashboard
+          amount: order.amount, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+          currency: "INR",
+          name: "Insoles",
+          description: "Test Transaction",
+          image: "https://example.com/your_logo",
+          order_id: order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+          callback_url: "https://eneqd3r9zrjok.x.pipedream.net/",
+          handler: function (response) {
+            // alert(response.razorpay_payment_id);
+            // alert(response.razorpay_order_id);
+            // alert(response.razorpay_signature)
 
-              verifyPayment(response, order);
-            },
-            prefill: {
-              name: "Gaurav Kumar",
-              email: "gaurav.kumar@example.com",
-              contact: "9999999999",
-            },
-            notes: {
-              address: "Razorpay Corporate Office",
-            },
-            theme: {
-              color: "#7c7efc",
-            },
-          };
-          function verifyPayment(payment, order) {
-            $.ajax({
-              url: "/login/verifyPayment",
-              data: {
-                payment,
-                order,
-              },
-              method: "post",
-              success: (response) => {
-                if (response.status) {
-                  location.href = "/login/orderSuccess";
-                } else {
-                  Swal.fire({
-                    icon: "error",
-                    title: "Oops...",
-                    text: "Something went wrong!",
-                  });
-                }
-              },
-            });
-          }
-          var rzp1 = new Razorpay(options);
-          rzp1.open();
-        }
+            verifyPayment(response, order);
+          },
+          prefill: {
+            name: "nihal",
+            email: "nihal@gmail.com",
+            contact: "9633726803",
+          },
+          notes: {
+            address: "Razorpay Corporate Office",
+          },
+          theme: {
+            color: "#7c7efc",
+          },
+        };
+        var rzp1 = new Razorpay(options);
+        rzp1.open();
+      }
+      function verifyPayment(payment, order) {
+        $.ajax({
+          url: "/login/verifyPayment",
+          data: {
+            payment,
+            order,
+          },
+          method: "post",
+          success: (response) => {
+            if (response.status) {
+              location.href = "/login/orderSuccess";
+            } else {
+              Swal.fire({
+                icon: "error",
+                title: "Oops...",
+                text: "Payment Failed!",
+              });
+            }
+          },
+        });
+      }
+
+      function adressError() {
+        Swal.fire({
+          icon: "error",
+          title: "Oops...",
+          text: "Address not added!",
+        });
       }
     </script>
     <footer class="ftco-footer ftco-section">
