--- a/views/adminHeader.ejs
+++ b/views/adminHeader.ejs
@@ -204,8 +204,24 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/showUser" class="menu-link">
+                  <a href="/adminLogin/coupon" class="menu-link">
                     <div data-i18n="Without menu">Add Coupon</div>
+                  </a>
+                </li>
+                
+                
+              </ul>
+            </li>
+            <li class="menu-item">
+              <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons bx bx-layout"></i>
+                <div data-i18n="Layouts">Banner </div>
+              </a>
+
+              <ul class="menu-sub">
+                <li class="menu-item">
+                  <a href="/adminLogin/banner" class="menu-link">
+                    <div data-i18n="Without menu">Add Banner</div>
                   </a>
                 </li>
                 
@@ -217,24 +233,15 @@
             <li class="menu-item">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Account Settings">Account Settings</div>
+                <div data-i18n="Account Settings">Order Management</div>
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
                   <a href="pages-account-settings-account.html" class="menu-link">
-                    <div data-i18n="Account">Account</div>
+                    <div data-i18n="Account">Orders</div>
                   </a>
                 </li>
-                <li class="menu-item">
-                  <a href="pages-account-settings-notifications.html" class="menu-link">
-                    <div data-i18n="Notifications">Notifications</div>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="pages-account-settings-connections.html" class="menu-link">
-                    <div data-i18n="Connections">Connections</div>
-                  </a>
-                </li>
+                
               </ul>
             </li>
             
