--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -100,18 +100,18 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="basic-default-company"
-              >Offer</label
+              >Discount</label
             >
             <input
               type="number"
               class="form-control"
-              name="offer"
+              name="discount"
               id="basic-default-company"
             />
           </div>
         </div>
 
-        <div class="mt-3">
+        <div class="mb-5 mx-4">
           <button type="submit" class="btn btn-primary">Send</button>
         </div>
       </form>
