--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -158,7 +158,7 @@
         </div>
     </div> -->
     <!-- Checkout -->
-    <div class="container bg0 p-t-20 p-b-85">
+    <div id="checkout"  class="container bg0 p-t-20 p-b-85">
       <div class="row">
         <div class="col-lg-10 col-xl-7 m-lr-auto">
           <div class="m-l-25 m-r--38 m-lr-0-xl">
@@ -230,7 +230,7 @@
                       <label class="form-check-label" for="exampleRadios1">
                         <p>
                           <strong>Name :</strong>
-                          
+
                           <%= address.fullName %>
                         </p>
                         <p>
@@ -386,7 +386,7 @@
           </div>
         </div>
 
-        <div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
+        <div id="order" class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
           <div
             class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm"
           >
@@ -411,9 +411,19 @@
                 <span class="mtext-101 cl2">Sub Total </span>
               </div>
 
+
               <div class="size-209 p-t-1 p-b-5 d-flex justify-content-end">
-                <span class="mtext-110 cl2"> <%= cartTotal %> </span>
+                <span class="mtext-110 cl2">₹ <%= cartTotal+discount %> </span>
               </div>
+
+              <div class="size-208 p-b-5">
+                <span class="mtext-101 cl2">Discount </span>
+              </div>
+
+              <div class="size-209 p-t-1 p-b-5 d-flex justify-content-end">
+                <span class="mtext-110 cl2"> ₹<%= discount %> </span>
+              </div>
+
               <div class="size-208 p-b-5">
                 <span class="mtext-101 cl2">Shpping </span>
               </div>
@@ -431,7 +441,48 @@
               </div>
             </div>
 
-            <div class="form-check">
+            <div
+              id="coupon"
+              class="d-flex justify-content-between flex-w flex-t bor12 p-t-27 p-b-33"
+            >
+              <style>
+                #codeInput::placeholder {
+                  font-size: small;
+                }
+                #codeInput {
+                  font-size: small;
+                }
+                .apply:hover {
+                  background-color: #717fe0;
+                  color: #fff;
+                }
+              </style>
+              <div class="row">
+                <span class="mtext-101 cl2 col-6">
+                  <input
+                    type="text"
+                    class="border p-3"
+                    id="codeInput"
+                    placeholder="Applay coupen"
+                    style="border-radius: 10px; height: 3rem; width: 12rem"
+                  />
+                </span>
+              </div>
+
+              <div class="p-t-1 flex-w">
+                <span>
+                  <button
+                    class="btn border apply"
+                    style="border-radius: 10px; width: 75px; height: 3rem"
+                    onclick="getcoupen('<%= cartTotal %>','<%= cartId %>')"
+                  >
+                    Applay
+                  </button>
+                </span>
+              </div>
+            </div>
+
+            <div class="form-check p-t-10">
               <input
                 class="form-check-input"
                 type="radio"
@@ -454,9 +505,9 @@
                 Cash on delivery
               </label>
             </div>
-            <% if(address) {%>
+            <% if(address != 0 ) {%>
             <button
-              onclick="placeOrder('<%=index%>')"
+              onclick="placeOrder('<%= index %>')"
               class="btn-success mt-4 flex-c-m stext-101 cl0 size-116 bor14 p-lr-15 trans-04 pointer"
             >
               Place Order
@@ -468,7 +519,6 @@
             >
               Place Order
             </button>
-
             <% } %>
           </div>
         </div>
@@ -476,6 +526,7 @@
     </div>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
+      
       function placeOrder(index) {
         let num = parseInt(index);
 
@@ -498,8 +549,6 @@
             }
           },
         });
-
-       
       }
       function razorpayPayment(order) {
         var options = {
@@ -555,6 +604,43 @@
         });
       }
 
+      
+      function getcoupen(cartTotal, cartId) {
+        const code = document.querySelector("#codeInput").value;
+        $.ajax({
+          url: "/login/checkCoupen",
+          data: {
+            cartTotal,
+            cartId,
+            code
+          },
+          method: "post",
+          success: (response) => {
+            if (response.apply) {
+              location.reload("#checkout");
+              Swal.fire({
+                icon: "success",
+                title: "Success",
+                text: "coupon applied",
+              });
+            } else if (response.exist) {
+              
+              Swal.fire({
+                icon: "error",
+                title: "Bad luck",
+                text: "coupon already applied",
+              });
+            } else {
+              
+              Swal.fire({
+                icon: "error",
+                title: "Bad luck",
+                text: "coupon not exist",
+              });
+            }
+          },
+        });
+      }
       function adressError() {
         Swal.fire({
           icon: "error",
@@ -562,6 +648,8 @@
           text: "Address not added!",
         });
       }
+
+      
     </script>
     <footer class="ftco-footer ftco-section">
       <div class="container">
