--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -41,7 +41,7 @@
                     class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
                   >
                     <i class="bi bi-cart-check-fill"></i
-                    ><a href="/login/orderDetails"><h6 class="mb-0 text-success">Orders</h6></a>
+                    ><a href="/login/orders"><h6 class="mb-0 text-success">Orders</h6></a>
                     <span class="text-secondary">@Insoles</span>
                   </li>
                   <li
