--- a/views/adminHeader.ejs
+++ b/views/adminHeader.ejs
@@ -224,6 +224,12 @@
                     <div data-i18n="Without menu">Add Banner</div>
                   </a>
                 </li>
+                <li class="menu-item">
+                  <a href="/adminLogin/showBanner" class="menu-link">
+                    <div data-i18n="Without menu">Show Banner</div>
+                  </a>
+                </li>
+                
                 
                 
               </ul>
@@ -237,7 +243,7 @@
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="pages-account-settings-account.html" class="menu-link">
+                  <a href="/adminLogin/orders" class="menu-link">
                     <div data-i18n="Account">Orders</div>
                   </a>
                 </li>
