--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -89,12 +89,12 @@
       </div>
         <div class="mb-3">
           <label class="form-label" for="basic-default-company"
-            >DISCRIPTION</label
+            >DESCRIPTION</label
           >
           <input
             type="text"
             class="form-control"
-            name="discription"
+            name="description"
             id="basic-default-company"
           />
         </div>
