--- a/views/adminHeader.ejs
+++ b/views/adminHeader.ejs
@@ -66,6 +66,8 @@
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="/public/admin/js/config.js"></script>
+      <!-- ajax  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
   </head>
 
   <body>
