--- a/views/adminHeader.ejs
+++ b/views/adminHeader.ejs
@@ -57,6 +57,9 @@
 
     <!-- Page CSS -->
 
+    <!-- invoice page  -->
+    <link rel="stylesheet" href="/public/admin/css/invoice.css" />
+
     <!-- Helpers -->
     <script src="/public/admin/vendor/js/helpers.js"></script>
 
