--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -443,43 +443,48 @@
                             <div class="d-flex justify-content-center" style="width: 20%;">
     
                                 
-                                    <% if(order.orderStatus == "Order Placed") { %>
+                                    <% if(x.orderStatus == "Order Placed") { %>
                                       <button
                                         type="button"
-                                        onclick="changeStatus('<%= order.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
+                                        onclick="changeStatus('<%= x.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
                                         class="btn btn-secondary btn-fw"
+                                        style="height: 50px;width: 130px;"
                                     >
                                     Order confirm
                                     </button>
-                                    <% } else if(order.orderStatus == "Packed"){ %>
+                                    <% } else if(x.orderStatus == "Packed"){ %>
                                       <button
                                         type="button"
-                                        onclick="changeStatus('<%= order.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
+                                        onclick="changeStatus('<%= x.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
                                         class="btn btn-secondary btn-fw"
+                                        style="height: 50px;width: 130px;"
                                     >
                                     Packed
                                     </button>
-                                    <% } else if(order.orderStatus == "Shipped"){ %>
+                                    <% } else if(x.orderStatus == "Shipped"){ %>
                                       <button
                                         type="button"
-                                        onclick="changeStatus('<%= order.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
+                                        onclick="changeStatus('<%= x.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
                                         class="btn btn-secondary btn-fw"
+                                        style="height: 50px;width: 130px;"
                                     >
                                     Shipped
                                     </button>
-                                    <% } else if(order.orderStatus == "Delivered"){ %>
+                                    <% } else if(x.orderStatus == "Delivered"){ %>
                                       <button
                                         type="button"
-                                        onclick="changeStatus('<%= order.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
+                                        onclick="changeStatus('<%= x.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
                                         class="btn btn-secondary btn-fw"
+                                        style="height: 50px;width: 130px;"
                                     >
                                     Delivered
                                     </button>
                                     <% } else { %>
                                       <button
                                         type="button"
-                                        onclick="changeStatus('<%= order.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
+                                        onclick="changeStatus('<%= x.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
                                         class="btn btn-danger btn-fw"
+                                        style="height: 50px;width: 130px;"
                                     >
                                     Cancelled
                                     </button>
@@ -488,11 +493,21 @@
                             </div>
                             <div class="d-flex justify-content-center" style="width: 20%;">
     
-                                <span  class="text-center "><%= order.paymentStatus %></span>
+                                <span  class="text-center "><%= x.paymentStatus %></span>
                             </div>
                             <div class="d-flex justify-content-center" style="width: 20%;">
-    
-                                <span  class="text-center "><%= order.paymentStatus %></span>
+                              <form action="/adminLogin/invoice/<%= order._id %>" method="post" enctype="multipart/form-data">
+                              <button
+                              type="submit"
+                              
+                              class="btn btn-secondary btn-fw"
+                              style="height: 40px;width: 100px;"
+                          > 
+                          
+                          Print
+                          </button >
+                          
+                        </form>
                             </div>
                            
                     </div>
@@ -554,6 +569,24 @@
                     if(response.success){
                         window.location.reload()
                     }
+                }
+            })
+        }
+
+        function invoice(orderId, productId){
+            
+            $.ajax({
+                url:"/adminLogin/invoice",
+                data:{
+                    
+                    orderId,
+                    productId
+                },
+                method:"post",
+                success:(response)=>{
+                    if(response.success){
+                      location.href = "/adminLogin/invoicePage"
+                  }
                 }
             })
         }
