--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -393,4 +393,9 @@
     	</div>
     </section>
 
+	<script type="text/javascript">
+        function preventBack() { window.history.forward(); }
+        setTimeout("preventBack()", 0); window.onunload = function () { null };
+    </script>
+
     <%- include('../userFooter.ejs') -%>
