--- a/views/userHeader.ejs
+++ b/views/userHeader.ejs
@@ -71,6 +71,12 @@
 
         <!-- ajax -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+
+
+
+        <!-- shop page  -->
+        
+
       </head>
   <body class="goto-here">
 
