--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -372,7 +372,7 @@
           </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
 
-    <div class="container " style="margin-bottom: 150px;">
+    <div class="container  " style="margin-bottom: 150px;">
         <div class="main-body mt-5 ">
             <br> <br>
             <h3 class="text-center">Orders</h3>
@@ -474,8 +474,8 @@
                                       <button
                                         type="button"
                                         onclick="changeStatus('<%= x.orderStatus %>','<%= order._id %>','<%= x.productId._id%>')"
-                                        class="btn btn-secondary btn-fw"
-                                        style="height: 50px;width: 130px;"
+                                        class="btn btn-secondary btn-fw "
+                                        style="height: 50px;width: 130px;" disabled
                                     >
                                     Delivered
                                     </button>
@@ -492,11 +492,14 @@
 
                             </div>
                             <div class="d-flex justify-content-center" style="width: 20%;">
-    
+
                                 <span  class="text-center "><%= x.paymentStatus %></span>
                             </div>
                             <div class="d-flex justify-content-center" style="width: 20%;">
                               <form action="/adminLogin/invoice/<%= order._id %>" method="post" enctype="multipart/form-data">
+                                <% if(x.orderStatus == "Cancelled") { %>
+                                  <h6>No bill</h6>
+                                  <% } else { %> 
                               <button
                               type="submit"
                               
@@ -506,6 +509,7 @@
                           
                           Print
                           </button >
+                          <% } %> 
                           
                         </form>
                             </div>
